minor fixes on mobile

--- a/src/Components/Loader/loader.css
+++ b/src/Components/Loader/loader.css
@@ -6,10 +6,10 @@
  width: 18rem;
  z-index: 999;
  border-radius: .375rem;
- background: rgba(255, 255, 255, 0.80);
+ background: rgba(255, 255, 255, 0.9);
  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
- backdrop-filter: blur(20px);
- -webkit-backdrop-filter: blur(20px);
+ backdrop-filter: blur(10px);
+ -webkit-backdrop-filter: blur(10px);
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
