--- a/src/Components/Modal/modal.css
+++ b/src/Components/Modal/modal.css
@@ -25,7 +25,8 @@ body.modal-open {
   position: relative;
   width: auto;
   margin: 0.5rem;
-  top: 10%;
+  top: 50%;
+  transform: translateY(-50%);
   background-color: white;
   margin: 0 auto;
   max-width: 800px;
@@ -36,13 +37,6 @@ body.modal-open {
   flex-direction: column;
 }
 
-@media screen and (max-width: 480px) {
-  .modal-dialog {
-    width: 100%;
-    top: 0;
-  }
-}
-
 .modal-header {
   padding: 1.5rem ;
   display: flex;
@@ -50,6 +44,34 @@ body.modal-open {
   justify-content: center;
   position: relative;
   border-bottom: 1px solid #E0E0E0;
+}
+
+.modal-footer {
+  padding: 1.5rem;
+  display: none;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  border-top: 1px solid #E0E0E0;
+}
+
+@media screen and (max-width: 820px) {
+  .modal-dialog {
+      width: 100%;
+      top: 50%;
+      transform: translateY(-50%);
+    }
+}
+
+@media screen and (max-width: 540px) {
+  .modal-dialog {
+    width: 100%;
+    top: 0;
+    transform: translateY(0)
+  }
+  .modal-footer {
+    display: flex;
+  }
 }
 
 .btn-dismiss {
@@ -68,6 +90,18 @@ body.modal-open {
 
 .btn-dismiss:hover {
   background-color: #EF5350;
+}
+
+.btn-back {
+  flex-shrink: 0;
+  height: 48px;
+  width: 48px;
+  font-weight: 600;
+  border-radius: 100%;
+  border: 1px solid #B0BEC5;
+  background-color: transparent;
+  cursor: pointer;
+  transition: 0.2s;
 }
 
 .modal-body {
